--- a/html/login.html
+++ b/html/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PetStride Login - Beautiful & Modern</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="../Style/login.css">
 </head>
 <body>
     <div class="container">
@@ -160,6 +160,7 @@
                     <a href="index.html" class="nav-link">Home</a>
                     <a href="faq.html" class="nav-link active">FAQ</a>
                     <a href="contact.html" class="nav-link">Contact</a>
+                    <a href="about_us.html" class="nav-link">About us</a>
                 </div>
             </div>
         </nav>
@@ -328,6 +329,7 @@
                     <a href="index.html" class="nav-link">Home</a>
                     <a href="faq.html" class="nav-link">FAQ</a>
                     <a href="contact.html" class="nav-link active">Contact</a>
+                    <a href="about_us.html" class="nav-link">About us</a>
                 </div>
             </div>
         </nav>
