Unified Navigation Bar and Repair image path

--- a/html/FAQ.html
+++ b/html/FAQ.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ - PetStride</title>
     <meta name="description" content="Find answers to common questions about PetStride - connecting pet owners with trusted caregivers">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="../Style/login.css">
 </head>
 <body>
     <!-- Animated Background -->
@@ -22,13 +22,17 @@
         <!-- Navigation -->
         <nav class="nav">
             <div class="nav-content">
-                <a href="index.html" class="logo-link">
-                    <img src="petstride-logo.png" alt="PetStride" class="nav-logo">
+                <a href="landingPage.html" class="logo-link">
+                    <img src="../img/petstride-logo.png" alt="PetStride" class="nav-logo">
                 </a>
                 <div class="nav-links">
-                    <a href="index.html" class="nav-link">Home</a>
-                    <a href="faq.html" class="nav-link active">FAQ</a>
-                    <a href="contact.html" class="nav-link">Contact</a>
+                    <a href="landingPage.html" class="nav-link">Home</a>
+                    <a href="about_us.html" class="nav-link">About Us</a>
+                    <a href="FAQ.html" class="nav-link active">FAQ</a>
+                    <a href="forum.html" class="nav-link">Forum</a>
+                    <a href="contactUs.html" class="nav-link">Contact</a>
+                    <a href="pet_profile.html" class="nav-link">My Pet</a>
+                    <a href="login.html" class="nav-btn">Login</a>
                 </div>
             </div>
         </nav>
@@ -149,7 +153,7 @@
                 <div class="cta-card">
                     <h2 class="cta-title">Still have questions?</h2>
                     <p class="cta-text">Our support team is here to help. Reach out anytime!</p>
-                    <a href="contact.html" class="cta-button">Contact Us</a>
+                    <a href="contactUs.html" class="cta-button">Contact Us</a>
                 </div>
             </div>
         </div>
@@ -162,6 +166,6 @@
         </div>
     </div>
 
-    <script src="login.js"></script>
+    <script src="../JS/login.js"></script>
 </body>
 </html>
