--- a/html/landingPage.html
+++ b/html/landingPage.html
@@ -430,21 +430,24 @@
         <!-- Navigation -->
         <nav class="nav">
             <div class="nav-content">
-                <a href="index.html" class="logo-link">
-                    <img src="petstride-logo.png" alt="PetStride" class="nav-logo">
+                <a href="landingPage.html" class="logo-link">
+                    <img src="../img/petstride-logo.png" alt="PetStride" class="nav-logo">
                 </a>
                 <div class="nav-links">
-                    <a href="faq.html" class="nav-link">FAQ</a>
+                    <a href="landingPage.html" class="nav-link">Home</a>
+                    <a href="about_us.html" class="nav-link">About Us</a>
+                    <a href="FAQ.html" class="nav-link">FAQ</a>
                     <a href="forum.html" class="nav-link">Forum</a>
-                    <a href="contact.html" class="nav-link">Contact</a>
-                    <a href="login.html" class="nav-btn">Get Started</a>
+                    <a href="contactUs.html" class="nav-link">Contact</a>
+                    <a href="pet_profile.html" class="nav-link">My Pet</a>
+                    <a href="login.html" class="nav-btn">Login</a>
                 </div>
             </div>
         </nav>
 
         <!-- Content -->
         <div class="content">
-            <img src="Pet_Stride-removebg-preview.png" alt="" style="display: block; margin: 0 auto; width: 400px; height: 400px;">
+            <img src="../img/Pet_Stride-removebg-preview.png" alt="" style="display: block; margin: 0 auto; width: 400px; height: 400px;">
             <!-- Hero Section -->
             <section class="hero">
                 <h1 class="hero-title">Your Pet's Journey of Comfort Starts Here 🐾</h1>
@@ -556,10 +559,10 @@
         <!-- Footer -->
         <footer class="footer">
             <div class="footer-links">
-                <a href="#" class="footer-link">About Us</a>
-                <a href="faq.html" class="footer-link">FAQ</a>
-                <a href="forum.html" class="footer-link">Community</a>
-                <a href="contact.html" class="footer-link">Contact</a>
+                <a href="about_us.html" class="footer-link">About Us</a>
+                <a href="FAQ.html" class="footer-link">FAQ</a>
+                <a href="forum.html" class="footer-link">Forum</a>
+                <a href="contactUs.html" class="footer-link">Contact</a>
                 <a href="#" class="footer-link">Privacy Policy</a>
                 <a href="#" class="footer-link">Terms of Service</a>
             </div>
