--- a/html/login.html
+++ b/html/login.html
@@ -124,6 +124,21 @@
             color: #764ba2;
         }
 
+        .nav-btn {
+            padding: 0.5rem 1.5rem;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            text-decoration: none;
+            border-radius: 8px;
+            font-weight: 600;
+            transition: transform 0.2s, box-shadow 0.2s;
+        }
+
+        .nav-btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+        }
+
         /* Content */
         .content {
             position: relative;
@@ -419,15 +434,17 @@
         <!-- Navigation -->
         <nav class="nav">
             <div class="nav-content">
-                <a href="index.html" class="logo-link">
-                    <img src="petstride-logo.png" alt="PetStride" class="nav-logo">
+                <a href="landingPage.html" class="logo-link">
+                    <img src="../img/petstride-logo.png" alt="PetStride" class="nav-logo">
                 </a>
                 <div class="nav-links">
-                    <a href="index.html" class="nav-link">Home</a>
-                    <a href="faq.html" class="nav-link">FAQ</a>
+                    <a href="landingPage.html" class="nav-link">Home</a>
+                    <a href="about_us.html" class="nav-link">About Us</a>
+                    <a href="FAQ.html" class="nav-link">FAQ</a>
                     <a href="forum.html" class="nav-link">Forum</a>
-                    <a href="contact.html" class="nav-link">Contact</a>
-                    <a href="about_us.html" class="nav-link">About us</a>
+                    <a href="contactUs.html" class="nav-link">Contact</a>
+                    <a href="pet_profile.html" class="nav-link">My Pet</a>
+                    <a href="login.html" class="nav-btn">Login</a>
                 </div>
             </div>
         </nav>
@@ -440,7 +457,7 @@
                     <div class="logo-wrapper">
                         <div class="logo-glow"></div>
                         <div class="logo">
-                            <img src="Pet_Stride-removebg-preview.png" alt="" style="width: 150px; height: 150px;">
+                            <img src="../img/Pet_Stride-removebg-preview.png" alt="" style="width: 150px; height: 150px;">
                         </div>
                     </div>
                 </div>
