--- a/html/about_us.html
+++ b/html/about_us.html
@@ -22,13 +22,17 @@
         <!-- Navigation -->
         <nav class="nav">
             <div class="nav-content">
-                <a href="#" class="logo-link">
+                <a href="landingPage.html" class="logo-link">
                     <img src="../img/petstride-logo.png" alt="PetStride" class="nav-logo">
                 </a>
                 <div class="nav-links">
-                    <a href="#" class="nav-link">Home</a>
+                    <a href="landingPage.html" class="nav-link">Home</a>
                     <a href="about_us.html" class="nav-link active">About Us</a>
-                    <a href="login.html" class="nav-link">Login</a>
+                    <a href="FAQ.html" class="nav-link">FAQ</a>
+                    <a href="forum.html" class="nav-link">Forum</a>
+                    <a href="contactUs.html" class="nav-link">Contact</a>
+                    <a href="pet_profile.html" class="nav-link">My Pet</a>
+                    <a href="login.html" class="nav-btn">Login</a>
                 </div>
             </div>
         </nav>
