--- a/html/signup.html
+++ b/html/signup.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PetStride Signup</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="../Style/login.css">
 </head>
 <body>
     <div class="container">
@@ -24,6 +24,24 @@
             <div class="paw" style="left: 5%; top: 45%; animation-delay: 17.5s;">🐾</div>
         </div>
 
+        <!-- Navigation -->
+        <nav class="nav">
+            <div class="nav-content">
+                <a href="landingPage.html" class="logo-link">
+                    <img src="../img/petstride-logo.png" alt="PetStride" class="nav-logo">
+                </a>
+                <div class="nav-links">
+                    <a href="landingPage.html" class="nav-link">Home</a>
+                    <a href="about_us.html" class="nav-link">About Us</a>
+                    <a href="FAQ.html" class="nav-link">FAQ</a>
+                    <a href="forum.html" class="nav-link">Forum</a>
+                    <a href="contactUs.html" class="nav-link">Contact</a>
+                    <a href="pet_profile.html" class="nav-link">My Pet</a>
+                    <a href="login.html" class="nav-btn">Login</a>
+                </div>
+            </div>
+        </nav>
+
         <!-- Floating Hearts -->
         <div class="heart heart-1">❤️</div>
         <div class="heart heart-2">❤️</div>
@@ -36,7 +54,7 @@
                 <div class="logo-container">
                     <div class="logo-wrapper">
                         <div class="logo-glow"></div>
-                        <img src="petstride-logo.png " alt="PetStride Logo" class="logo">
+                        <img src="../img/petstride-logo.png" alt="PetStride Logo" class="logo">
                     </div>
                 </div>
 
@@ -121,7 +139,7 @@
         </div>
     </div>
 
-    <script src="login.js"></script>
+    <script src="../JS/login.js"></script>
 </body>
 </html>
 
