restructuring of files

--- a/contactUs.html
+++ b/contactUs.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - PetStride</title>
     <meta name="description" content="Get in touch with PetStride - we'd love to hear from you">
-    <link rel="stylesheet" href="../Style/login.css">
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
     <!-- Animated Background -->
@@ -22,17 +22,13 @@
         <!-- Navigation -->
         <nav class="nav">
             <div class="nav-content">
-                <a href="landingPage.html" class="logo-link">
-                    <img src="../img/petstride-logo.png" alt="PetStride" class="nav-logo">
+                <a href="index.html" class="logo-link">
+                    <img src="petstride-logo.png" alt="PetStride" class="nav-logo">
                 </a>
                 <div class="nav-links">
-                    <a href="landingPage.html" class="nav-link">Home</a>
-                    <a href="about_us.html" class="nav-link">About Us</a>
-                    <a href="FAQ.html" class="nav-link">FAQ</a>
-                    <a href="forum.html" class="nav-link">Forum</a>
-                    <a href="contactUs.html" class="nav-link active">Contact</a>
-                    <a href="pet_profile.html" class="nav-link">My Pet</a>
-                    <a href="login.html" class="nav-btn">Login</a>
+                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="faq.html" class="nav-link">FAQ</a>
+                    <a href="contact.html" class="nav-link active">Contact</a>
                 </div>
             </div>
         </nav>
@@ -182,6 +178,6 @@
         </div>
     </div>
 
-    <script src="../JS/login.js"></script>
+    <script src="login.js"></script>
 </body>
 </html>
