--- a/forum.html
+++ b/forum.html
@@ -33,7 +33,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 50%, #f093fb 100%);
+            background:linear-gradient(135deg, rgb(242, 242, 242, 0.8) 0%, rgba(113, 154, 252, 0.8) 50%, rgb(242, 242, 242, 0.8) 100%);
             background-size: 400% 400%;
             animation: gradient-shift 15s ease infinite;
             z-index: -1;
@@ -122,21 +122,6 @@
         .nav-link:hover,
         .nav-link.active {
             color: #764ba2;
-        }
-
-        .nav-btn {
-            padding: 0.5rem 1.5rem;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            text-decoration: none;
-            border-radius: 8px;
-            font-weight: 600;
-            transition: transform 0.2s, box-shadow 0.2s;
-        }
-
-        .nav-btn:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
         }
 
         /* Content */
@@ -433,17 +418,14 @@
         <!-- Navigation -->
         <nav class="nav">
             <div class="nav-content">
-                <a href="landingPage.html" class="logo-link">
-                    <img src="../img/petstride-logo.png" alt="PetStride" class="nav-logo">
+                <a href="index.html" class="logo-link">
+                    <img src="petstride-logo.png" alt="PetStride" class="nav-logo">
                 </a>
                 <div class="nav-links">
-                    <a href="landingPage.html" class="nav-link">Home</a>
-                    <a href="about_us.html" class="nav-link">About Us</a>
-                    <a href="FAQ.html" class="nav-link">FAQ</a>
+                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="faq.html" class="nav-link">FAQ</a>
                     <a href="forum.html" class="nav-link active">Forum</a>
-                    <a href="contactUs.html" class="nav-link">Contact</a>
-                    <a href="pet_profile.html" class="nav-link">My Pet</a>
-                    <a href="login.html" class="nav-btn">Login</a>
+                    <a href="contact.html" class="nav-link">Contact</a>
                 </div>
             </div>
         </nav>
