--- a/FAQ.html
+++ b/FAQ.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ - PetStride</title>
     <meta name="description" content="Find answers to common questions about PetStride - connecting pet owners with trusted caregivers">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="Style/login.css">
 </head>
 <body>
     <!-- Animated Background -->
