--- a/contactUs.html
+++ b/contactUs.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - PetStride</title>
     <meta name="description" content="Get in touch with PetStride - we'd love to hear from you">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="Style/login.css">
 </head>
 <body>
     <!-- Animated Background -->
