--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PetStride Signup</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="Style/login.css">
 </head>
 <body>
     <div class="container">
