--- a/terms.html
+++ b/terms.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms & Conditions - PetStride</title>
-    <link rel="stylesheet" href="terms.css">
+    <link rel="stylesheet" href="Style/terms.css">
 </head>
 <body>
     <div class="container">
