update about us page styles and fix stylesheet path; add About Us link to navigation

--- a/about_us.html
+++ b/about_us.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - PetStride</title>
     <meta name="description" content="Learn about PetStride, our mission, and our team dedicated to pet care.">
-    <link rel="stylesheet" href="../Style/about_us.css">
+    <link rel="stylesheet" href="Style/about_us.css">
 </head>
 <body>
     <!-- Animated Background -->
