--- a/login.html
+++ b/login.html
@@ -427,6 +427,7 @@
                     <a href="faq.html" class="nav-link">FAQ</a>
                     <a href="forum.html" class="nav-link">Forum</a>
                     <a href="contactUs.html" class="nav-link">Contact</a>
+                    <a href="about_us.html" class="nav-link">About Us</a>
                 </div>
             </div>
         </nav>
