--- a/landingPage.html
+++ b/landingPage.html
@@ -437,6 +437,7 @@
                     <a href="faq.html" class="nav-link">FAQ</a>
                     <a href="forum.html" class="nav-link">Forum</a>
                     <a href="contact.html" class="nav-link">Contact</a>
+                    <a href="about_us.html" class="footer-link">About_us</a>
                     <a href="login.html" class="nav-btn">Get Started</a>
                 </div>
             </div>
@@ -556,12 +557,13 @@
         <!-- Footer -->
         <footer class="footer">
             <div class="footer-links">
-                <a href="#" class="footer-link">About Us</a>
-                <a href="faq.html" class="footer-link">FAQ</a>
+                <a href="about_us.html" class="footer-link">About Us</a>
                 <a href="forum.html" class="footer-link">Community</a>
+                <a href="faq.html" class="footer-link">FAQ</a>
                 <a href="contact.html" class="footer-link">Contact</a>
+                
                 <a href="#" class="footer-link">Privacy Policy</a>
-                <a href="#" class="footer-link">Terms of Service</a>
+                <a href="terms.html" class="footer-link">Terms of Service</a>
             </div>
 
             <div class="footer-copyright">
