addition of job board and integration of pet profile view into dashboard

--- a/FAQ.html
+++ b/FAQ.html
@@ -26,9 +26,9 @@
                     <img src="petstride-logo.png" alt="PetStride" class="nav-logo">
                 </a>
                 <div class="nav-links">
-                    <a href="index.html" class="nav-link">Home</a>
-                    <a href="faq.html" class="nav-link active">FAQ</a>
-                    <a href="contact.html" class="nav-link">Contact</a>
+                    <a href="landingPage.html" class="nav-link">Home</a>
+                    <a href="FAQ.html" class="nav-link active">FAQ</a>
+                    <a href="contactUs.html" class="nav-link">Contact</a>
                 </div>
             </div>
         </nav>
@@ -149,16 +149,16 @@
                 <div class="cta-card">
                     <h2 class="cta-title">Still have questions?</h2>
                     <p class="cta-text">Our support team is here to help. Reach out anytime!</p>
-                    <a href="contact.html" class="cta-button">Contact Us</a>
+                    <a href="contactUs.html" class="cta-button">Contact Us</a>
                 </div>
             </div>
         </div>
 
         <!-- Footer -->
         <div class="footer">
-            <a href="#" class="footer-link">Terms of Service</a>
+            <a href="terms.html" class="footer-link">Terms of Service</a>
             <span class="footer-dot">•</span>
-            <a href="#" class="footer-link">Privacy Policy</a>
+            <a href="terms.html" class="footer-link">Privacy Policy</a>
         </div>
     </div>
 
