--- a/aboutUs.html
+++ b/aboutUs.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - PetStride</title>
     <meta name="description" content="Learn about PetStride, our mission, and our team dedicated to pet care.">
-    <link rel="stylesheet" href="../Style/about_us.css">
+    <link rel="stylesheet" href="Style/about_us.css">
 </head>
 <body>
     <!-- Animated Background -->
@@ -27,7 +27,7 @@
                 </a>
                 <div class="nav-links">
                     <a href="landingPage.html" class="nav-link">Home</a>
-                    <a href="about_us.html" class="nav-link active">About Us</a>
+                    <a href="aboutUs.html" class="nav-link active">About Us</a>
                     <a href="FAQ.html" class="nav-link">FAQ</a>
                     <a href="forum.html" class="nav-link">Forum</a>
                     <a href="contactUs.html" class="nav-link">Contact</a>
