--- a/contactUs.html
+++ b/contactUs.html
@@ -172,9 +172,9 @@
 
         <!-- Footer -->
         <div class="footer">
-            <a href="#" class="footer-link">Terms of Service</a>
+            <a href="terms.html" class="footer-link">Terms of Service</a>
             <span class="footer-dot">•</span>
-            <a href="#" class="footer-link">Privacy Policy</a>
+            <a href="terms.html" class="footer-link">Privacy Policy</a>
         </div>
     </div>
 
