--- a/forum.html
+++ b/forum.html
@@ -422,10 +422,10 @@
                     <img src="petstride-logo.png" alt="PetStride" class="nav-logo">
                 </a>
                 <div class="nav-links">
-                    <a href="index.html" class="nav-link">Home</a>
-                    <a href="faq.html" class="nav-link">FAQ</a>
+                    <a href="landingPage.html" class="nav-link">Home</a>
+                    <a href="FAQ.html" class="nav-link">FAQ</a>
                     <a href="forum.html" class="nav-link active">Forum</a>
-                    <a href="contact.html" class="nav-link">Contact</a>
+                    <a href="contactUs.html" class="nav-link">Contact</a>
                 </div>
             </div>
         </nav>
@@ -620,11 +620,11 @@
 
         <!-- Footer -->
         <div class="footer">
-            <a href="#" class="footer-link">Terms of Service</a>
+            <a href="terms.html" class="footer-link">Terms of Service</a>
             <span class="footer-dot">•</span>
-            <a href="#" class="footer-link">Privacy Policy</a>
+            <a href="terms.html" class="footer-link">Privacy Policy</a>
             <span class="footer-dot">•</span>
-            <a href="#" class="footer-link">Community Guidelines</a>
+            <a href="terms.html" class="footer-link">Community Guidelines</a>
         </div>
     </div>
 </body>
