--- a/landingPage.html
+++ b/landingPage.html
@@ -430,13 +430,13 @@
         <!-- Navigation -->
         <nav class="nav">
             <div class="nav-content">
-                <a href="index.html" class="logo-link">
+                <a href="landingPage.html" class="logo-link">
                     <img src="petstride-logo.png" alt="PetStride" class="nav-logo">
                 </a>
                 <div class="nav-links">
-                    <a href="faq.html" class="nav-link">FAQ</a>
+                    <a href="FAQ.html" class="nav-link">FAQ</a>
                     <a href="forum.html" class="nav-link">Forum</a>
-                    <a href="contact.html" class="nav-link">Contact</a>
+                    <a href="contactUs.html" class="nav-link">Contact</a>
                     <a href="login.html" class="nav-btn">Get Started</a>
                 </div>
             </div>
@@ -556,12 +556,12 @@
         <!-- Footer -->
         <footer class="footer">
             <div class="footer-links">
-                <a href="#" class="footer-link">About Us</a>
-                <a href="faq.html" class="footer-link">FAQ</a>
+                <a href="aboutUs.html" class="footer-link">About Us</a>
+                <a href="FAQ.html" class="footer-link">FAQ</a>
                 <a href="forum.html" class="footer-link">Community</a>
-                <a href="contact.html" class="footer-link">Contact</a>
-                <a href="#" class="footer-link">Privacy Policy</a>
-                <a href="#" class="footer-link">Terms of Service</a>
+                <a href="contactUs.html" class="footer-link">Contact</a>
+                <a href="terms.html" class="footer-link">Privacy Policy</a>
+                <a href="terms.html" class="footer-link">Terms of Service</a>
             </div>
 
             <div class="footer-copyright">
