--- a/terms.html
+++ b/terms.html
@@ -22,9 +22,9 @@
                     <img src="petstride-logo.png" alt="PetStride" class="nav-logo">
                 </a>
                 <div class="nav-links">
-                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="landingPage.html" class="nav-link">Home</a>
                     <a href="faq.html" class="nav-link">FAQ</a>
-                    <a href="contact.html" class="nav-link">Contact</a>
+                    <a href="contactUs.html" class="nav-link">Contact</a>
                     <a href="terms.html" class="nav-link active">Terms</a>
                 </div>
             </div>
@@ -125,7 +125,7 @@
             <div class="cta-card">
                 <h2 class="cta-title">Need help understanding these terms?</h2>
                 <p class="cta-text">Our team is here to help you with any legal or policy questions.</p>
-                <a href="contact.html" class="cta-button">Contact Support</a>
+                <a href="contactUs.html" class="cta-button">Contact Support</a>
             </div>
         </div>
 
