--- a/contactUs.html
+++ b/contactUs.html
@@ -26,7 +26,7 @@
                     <img src="petstride-logo.png" alt="PetStride" class="nav-logo">
                 </a>
                 <div class="nav-links">
-                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="landingPage.html" class="nav-link">Home</a>
                     <a href="faq.html" class="nav-link">FAQ</a>
                     <a href="contact.html" class="nav-link active">Contact</a>
                 </div>
