--- a/landingPage.html
+++ b/landingPage.html
@@ -435,7 +435,7 @@
                 </a>
                 <div class="nav-links">
                     <a href="FAQ.html" class="nav-link">FAQ</a>
-                    <a href="forum.html" class="nav-link">Forum</a>
+                    <a href="controller/ForumController.php" class="nav-link">Forum</a>
                     <a href="contactUs.html" class="nav-link">Contact</a>
                     <a href="login.html" class="nav-btn">Get Started</a>
                 </div>
@@ -542,7 +542,7 @@
                 <div class="cta-card">
                     <h2 class="cta-title">Ready to Get Started?</h2>
                     <p class="cta-description">Join thousands of pet parents who trust PetStride to keep their furry friends safe and happy.</p>
-                    <a href="login.html" class="btn-primary">
+                    <a href="signup.html" class="btn-primary">
                         Create Your Account
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <line x1="5" y1="12" x2="19" y2="12"></line>
@@ -558,7 +558,7 @@
             <div class="footer-links">
                 <a href="aboutUs.html" class="footer-link">About Us</a>
                 <a href="FAQ.html" class="footer-link">FAQ</a>
-                <a href="forum.html" class="footer-link">Community</a>
+                <a href="controller/ForumController.php" class="footer-link">Community</a>
                 <a href="contactUs.html" class="footer-link">Contact</a>
                 <a href="terms.html" class="footer-link">Privacy Policy</a>
                 <a href="terms.html" class="footer-link">Terms of Service</a>
