--- a/aboutUs.html
+++ b/aboutUs.html
@@ -29,8 +29,9 @@
                     <a href="landingPage.html" class="nav-link">Home</a>
                     <a href="aboutUs.html" class="nav-link active">About Us</a>
                     <a href="FAQ.html" class="nav-link">FAQ</a>
-                    <a href="forum.html" class="nav-link">Forum</a>
+                    <a href="controller/ForumController.php" class="nav-link">Forum</a>
                     <a href="contactUs.html" class="nav-link">Contact</a>
+                    <a href="pet_profile.html" class="nav-link">My Pet</a>
                     <a href="login.html" class="nav-btn">Login</a>
                 </div>
             </div>
